err/unicorn-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unicorn_client'...
Compiling './lib/python3.5/site-packages/unicorn_client/hat.py'...
***   File "./lib/python3.5/site-packages/unicorn_client/hat.py", line 6
    print "No unicornhat module"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unicorn_client/mock'...
Compiling './lib/python3.5/site-packages/unicorn_client/mock/microdotphat.py'...
***   File "./lib/python3.5/site-packages/unicorn_client/mock/microdotphat.py", line 3
    print "clear"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unicorn_client/mock/unicornhat.py'...
***   File "./lib/python3.5/site-packages/unicorn_client/mock/unicornhat.py", line 5
    print "set_layout " + str(layout)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unicorn_client/routines'...
Listing './lib/python3.5/site-packages/unicorn_client-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
